# google-sheets-cli

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_connection.py  test_setup.py  xfce_shortcuts.json
.git.backup/: index
chrome_manager/: README.md  cli.py
chrome_manager/commands/: maintenance.py  profile_sync.py  viewer.py  xfce_keyboard_shortcut_scanner.py
chrome_manager/config/: env_manager.py  settings.py
chrome_manager/core/: __init__.py  sheets.py
chrome_manager/utils/: chrome_scanner.py  system_info.py
scripts/: setup_env.sh
