[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-sheets-manager"
version = "0.1.0"
description = "Chrome Profile Manager with Google Sheets Integration"
authors = [
    { name = "Chris Trauco", email = "dev@trau.co" }
]
dependencies = [
    "rich>=13.7.0",
    "gspread>=6.0.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "psutil>=5.9.8",
    "distro>=1.9.0"
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/iTrauco/chrome-sheets-manager"
Repository = "https://github.com/iTrauco/chrome-sheets-manager.git"

[project.scripts]
chrome-manager = "chrome_manager.cli:main"

[tool.setuptools]
packages = ["chrome_manager"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3