[metadata]
name = chrome-sheets-manager
version = 0.1.0
author = Chris Trauco
author_email = dev@trau.co
description = Chrome Profile Manager with Google Sheets Integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iTrauco/chrome-sheets-manager
project_urls =
    Bug Tracker = https://github.com/iTrauco/chrome-sheets-manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    rich>=13.7.0
    gspread>=6.0.0
    google-auth>=2.28.1
    google-auth-oauthlib>=1.2.0
    google-auth-httplib2>=0.2.0
    psutil>=5.9.8
    distro>=1.9.0

[options.packages.find]
where = .
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    chrome-manager = chrome_manager.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,*.egg-info